--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@
 @font-face {
     font-family: 'ttnorms-regular';
     src: url(assets/TTNorms-Regular.otf);
-    /* src: url(assets/TTNorms-Bold.otf); */
 }
 
 @font-face {
@@ -42,7 +41,8 @@ a {
 p,
 a,
 li,
-button {
+button,
+span {
     font-family: 'ttnorms-regular';
     font-size: 1.3;
 }
@@ -262,6 +262,10 @@ header {
     border-radius: 50%;
 }
 
+.banner .input-wrapper #i3 {
+    display: none;
+}
+
 
 .banner button:nth-child(2) {
     background: var(--background-color);
@@ -414,8 +418,9 @@ header {
     position: absolute;
 }
 
-.services {
-    padding: 20px;
+.services h1 {
+    margin: 20px 130px 20px 100px;
+    text-align: center;
 }
 
 .services img {
@@ -425,13 +430,15 @@ header {
 }
 
 .services h3 {
-    font-size: 30px;
-    margin: 10px 0;
+    font-size: 23px;
+    padding: 10px 0;
+    margin: 0;
 }
 
 .services h5 {
     font-size: 18px;
-    margin: 10px 0;
+    padding: 10px 0;
+    margin: 0;
 }
 
 .services p {
@@ -442,6 +449,21 @@ header {
     padding: 10px;
     margin-bottom: 20px;
 }
+
+.services .bg {
+    background: linear-gradient(to bottom, white 0%, white 10%, var(--background-color) 10%, var(--background-color) 100%);
+}
+
+.services .content {
+    padding: 20px;
+
+}
+
+.shop {
+    margin: 20px;
+}
+
+
 
 .services .groceries {
     margin-bottom: 20px;
@@ -544,30 +566,33 @@ header {
     display: grid;
     grid-column: 1/7;
 }
-.seemore{
+
+.seemore {
     display: flex;
     justify-content: center;
     width: 100%;
     text-align: center;
+    margin-bottom: 50px;
 }
 
-.see{
+.see {
     justify-content: center;
     background: none;
-    color: #333333;
+    color: #080707;
     font-size: 20px;
     padding: 20px;
     padding-right: 5px;
     font-weight: bold;
 }
-svg{
+
+svg {
     background: #f1f1f1ff;
     border-radius: 30px;
     padding: 5px;
     cursor: pointer;
     margin-top: 19px;
- 
-    
+
+
 }
 
 
@@ -642,7 +667,7 @@ footer a {
 }
 
 
-footer .lang{
+footer .lang {
     display: flex;
     border-radius: 20px;
     justify-content: center;
@@ -651,12 +676,14 @@ footer .lang{
     margin: 10px auto;
     height: 30px;
 }
-.lang #lang{
+
+.lang #lang {
     border: none;
-   font-size: 15px;
-   border-radius: 20px;
+    font-size: 15px;
+    border-radius: 20px;
 }
-.lang img{
+
+.lang img {
     width: 20%;
     height: 20px;
     margin: auto 0;
@@ -668,16 +695,17 @@ footer .greyicon {
     margin: 0;
 
 }
+
 footer span {
-   
+
     font-size: 13px;
     margin: auto 10px;
     font-weight: bold;
-   
+
 }
 
 .last {
-   display: flex;
+    display: flex;
     margin: auto 20px;
     flex-wrap: wrap;
     justify-content: center;
@@ -725,6 +753,16 @@ footer span {
 
     }
 
+    .banner .input-wrapper #i1 {
+        display: none;
+    }
+
+    .banner .input-wrapper #i3 {
+        margin-bottom: 20px;
+        margin-left: 5px;
+        display: flex;
+    }
+
     .banner .signin button {
         background: none !important;
         padding: 0 !important;
@@ -768,9 +806,13 @@ footer span {
 
     }
 
-    .services>div {
+    .content>div {
         display: flex;
 
+    }
+
+    .shop {
+        display: flex;
     }
 
     .services .find,
@@ -797,7 +839,7 @@ footer span {
 
     .services img {
         width: 40%;
-        height: 400px !important;
+        height: 450px !important;
     }
 
     .services .dashpass div,
@@ -877,6 +919,24 @@ footer span {
         padding: 10px;
     }
 
+    .neighbour .tab-content {
+        display: flex !important;
+        flex-wrap: wrap;
+        margin-left: 60px;
+        gap: 3px;
+        padding-bottom: 20px;
+        width: 100%;
+        justify-content: space-between;
+        list-style-type: none;
+    }
+
+    .neighbour .items>* {
+        flex: 1 1 200px;
+        text-align: left;
+    }
+
+
+
     footer .cat {
         display: flex;
         flex-wrap: wrap;
@@ -885,7 +945,7 @@ footer span {
         padding-bottom: 20px;
         width: 100%;
         justify-content: space-between;
-    
+
     }
 
     footer .cat>* {
@@ -916,16 +976,18 @@ footer span {
     .trio h4 {
         padding-left: 19px;
     }
-    footer .tab{
+
+    footer .tab {
         display: flex;
         flex-direction: row-reverse;
         justify-content: space-between;
     }
-    footer .lang{
-    width: 220px;
-    margin-right: 30px;
-    
-}
+
+    footer .lang {
+        width: 220px;
+        margin-right: 30px;
+
+    }
 
 }
 
@@ -980,17 +1042,32 @@ footer span {
         font-size: 20px;
     }
 
+    .services .bg {
+        background: linear-gradient(to bottom, white 0%, white 40%, var(--background-color) 40%, var(--background-color) 100%);
+    }
+
     .services img {
-        width: 70%;
-        height: 700px !important;
-        background-size: cover;
-        margin: 30px;
+        width: 60%;
+        height: 550px !important;
+        object-fit: contain;
+    }
+
+    .services .dashpass img,
+    .services .partner img {
+        margin-right: 40px;
+    }
+
+    .services .dasher img,
+    .services .shop img,
+    .services .find img {
+        margin-left: 60px;
     }
 
     .services div div {
-        padding: 40px 40px 40px 40px;
         line-height: 1.3;
-        margin: 30px;
+        margin: 0;
+        padding: 0;
+
         align-self: center;
 
 
@@ -1005,8 +1082,7 @@ footer span {
     }
 
     .services button {
-        margin: 20px;
-        padding: 20px;
+
         font-weight: bolder;
 
     }
@@ -1015,46 +1091,52 @@ footer span {
         font-size: 20px;
     }
 
+    .services .shop img {
+        object-fit: cover;
+        height: 800px !important;
+        overflow-y: visible;
+        z-index: 1;
+        margin-bottom: -50px;
+    }
+
+
     .services .groceries {
-        margin: 20px 0 20px 0;
-        height: 800px;
-        background-size: cover;
+        margin: 0 0 20px 0;
+        height: 600px;
+
+        background-size: contain;
+        background-repeat: no-repeat;
+
 
     }
 
-    .services .groceries .text {
+    .services .groceries h3 {
+        margin: 30px 400px 0 400px;
 
-        width: 100%;
-        padding: 100px 400px 100px 400px;
     }
 
-
-    .groceries h3 {
-        font-size: 50px;
-    }
-
-    .groceries h5 {
-        font-size: large;
-    }
 
     .groceries p {
         font-size: 25px;
+        margin: 30px 150px 0 150px;
+
+
     }
 
     .featured1 h1 {
         font-size: 40px;
-        padding: 30px 500px 10px 500px;
+        padding: 30px 300px 10px 300px;
     }
 
     .featured1 img {
-        width: 650px;
+        width: 550px;
         height: 650px;
-        object-fit: cover;
+        object-fit: contain;
         padding: 10px;
     }
 
     .featured1 h3 {
-        font-size: 55px;
+        font-size: 40px;
     }
 
     .featured1 p {
@@ -1070,16 +1152,27 @@ footer span {
     .featured1 .alcohol .care {
         padding-top: 20px;
     }
-     footer .cat>* {
+
+    footer .cat>* {
         flex: 0 0 250px;
         text-align: left;
 
     }
-    footer .lap{
-        display: flex ;
+
+    footer .lap {
+        display: flex;
         flex-direction: row-reverse;
         justify-content: space-around;
         margin-left: -60px;
         margin-top: 40px
+    }
+
+    footer .lang {
+        height: 40px !important;
+    }
+
+    .lang img {
+
+        margin: auto 5px auto 0;
     }
 }
