--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ header{
 }
 
 .head {
-    margin: 7px 0 0 0;
+    margin: 6.5px 0 0 0;
     gap: 8px;
 
     /* margin-left: -20px; */
@@ -177,7 +177,7 @@ header{
     justify-self: flex-end;
     margin-bottom: 24px;
     margin-left: 10px;
-    margin-right: 7.5px;
+    margin-right: 8px;
    
 }
 
@@ -274,7 +274,7 @@ header{
 .banner .name {
     display: flex;
     justify-content: center;
-    margin-top: 35px;
+    margin-top: 33px;
     padding-bottom: 0;
     align-items: center;
     box-sizing: border-box;
@@ -288,6 +288,7 @@ header{
 
 .banner .name .sv2 {
     margin-left: 8px;
+    /* transform: translateY(-1px); */
 
 }
 
@@ -327,7 +328,13 @@ header{
     font-weight: 500;
     line-height: 22px;
     box-sizing: border-box;
-     padding-left: 32px; 
+    height: 51.99px;
+    width: 301.86px;
+    padding: 6px 16px;
+    max-width: 100%;
+    min-height: 40px;
+    /* transform: translateY(-4px); */
+    
 
    
 }
@@ -336,24 +343,31 @@ header{
 .input-wrapper input {
     max-width: 100%;
     border: none;
-    margin: 0;
+    /* margin: 0; */
     font-size: 16px;
     font-weight: 500;
     outline: none;
     justify-self: center;
     align-self: center;
     border-radius: 30px;
+    flex-grow: 1;
+    transform: translateX(7px);
+    /* margin: 0 12px 0 auto; */
+    max-width: 100%;
     padding-right: 0px;
+    margin: 0 0px 4px auto;
+    /* box-sizing: border-box; */
 
 }
 
 .input-wrapper .svg1 {
     cursor: pointer;
     background: none;
-    margin-top: 6px;
-    margin-left: -20px;
-    margin-right: 10px;
-    box-sizing: border-box;
+    max-width: 100%;
+    margin-right: 0px;
+    /* box-sizing: border-box; */
+    transform: translateY(2px);
+
 
 
 }
@@ -364,7 +378,10 @@ header{
     border-radius: 50%;
     padding: 8px;
     margin-top: 7px;
-    margin-right: 20px;
+    margin-right: 0px;
+    max-width: 100%;
+    z-index: 2;
+    position: relative;
     
 }
 
@@ -450,9 +467,7 @@ header{
     font-size: 14px;
     font-weight: 200;
     display: block;
-    margin: 0;
-    padding: 0;
-    padding: 2px;
+    margin: 2px 0 0 4px;
     color: #606060;
     font-weight: 600;
 
@@ -475,6 +490,7 @@ header{
 
     padding-right: 2px;
     padding-left: 4px;
+    margin-top: 2px;
 }
 
 .app .flex {
@@ -497,7 +513,7 @@ header{
 
 .app .div2 {
     background: #f7f7f7ff;
-    margin-top: 20px;
+    margin-top: 21px;
     max-width: 100%;
     display: block;
     box-sizing: border-box;
@@ -523,7 +539,7 @@ header{
     cursor: pointer;
     grid-row: 2/3;
     grid-column: 1/7;
-    margin: 16px 0 0 0;
+    margin: 19px 0 0 0;
     width: 100%;
 
 }
@@ -682,7 +698,7 @@ header{
         letter-spacing: -.3px;
 
     text-align: left;
-    margin-top: 10px;
+    margin-top: 11.5px;
     line-height: 20px;
 }
 
@@ -858,6 +874,7 @@ header{
     object-fit: cover;
     box-sizing: border-box;
     object-position: left center !important;
+    margin-bottom: 4.1px;
 
 }
 
@@ -877,7 +894,8 @@ header{
 }
 
 .featured1 button {
-    padding: 0px 12px;
+    /* padding: 0px 12px; */
+    padding: 0;
     height: 32px;
     font-size: 14px;
     font-weight: 700;
@@ -885,11 +903,25 @@ header{
     margin-top: 20px;
     box-sizing: border-box;
 }
+.featured1 .beauty button{
+    width: 105.91px;
+}
+.featured1 .flowers button{
+    width: 111.5px;
+}
+.featured1 .alcohol button{
+    width: 110.59px;
+}
+.featured1 .pet button{
+    width: 133.5px;
+}
+
 
 .featured1 .alcohol .care {
     margin-top: 10px;
     font-weight: 900;
     line-height: 18px;
+    font-size: 12px;
 
 }
 
@@ -933,6 +965,7 @@ header{
     font-size: 32px;
     line-height: 40px;
     font-weight: 900;
+    box-sizing: border-box;
 
 }
 
@@ -942,6 +975,8 @@ header{
     width: 100%;
     justify-content: center;
     gap: 24px;
+    margin-top: -7px;
+    box-sizing: border-box;
 }
 
 .neighbour .spans {
@@ -987,7 +1022,7 @@ header{
 .neighbour .tab-content .items {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 16px;
+    gap: 19px;
     width: 100%;
 }
 
@@ -1003,7 +1038,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 10px 0;
+    padding: 5px 0 10px;
     box-sizing: border-box;
 }
 
@@ -1039,7 +1074,7 @@ header{
         padding: 24px 16px;
     }
     .neighbour .spans div{
-        padding-bottom: 12px;
+        padding-bottom: 7px;
     }
  
 
@@ -1059,11 +1094,13 @@ footer .get {
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
+    flex: 1 1 0%;
+    text-align: center;
 }
 
 footer h4 {
     color: rgb(255, 255, 255);
-    margin-bottom: 0 8px 0 0;
+    margin: 0 0 8px 0;
     font-size: 16px;
     font-weight: 500;
     line-height: 22px;
@@ -1075,76 +1112,146 @@ footer .get .cat {
     flex: 1 1 0%;
     box-sizing: border-box;
     list-style: none;
+    gap: 12px;
+}
+footer .get .cat div{
+    display: flex;
+    flex-direction: column;
+    flex:  1 1 0%;
+    box-sizing: border-box;
 }
 
-footer li a {
+
+
+footer a {
+    margin-top: 8px;
+    box-sizing: border-box;
     color: rgb(196, 196, 196);
     font-size: 14px;
     font-weight: 500;
     line-height: 20px;
-}
-
-footer ul li a {
-    padding: 5px;
-    font-size: 15px;
-    text-decoration: none;
-}
-
-/* footer img {
-    margin: 10px;
-    border-radius: 10px;
-}
-
-footer a {
-    color: rgb(172, 171, 171);
-    margin: 10px;
-    font-size: 25px;
+    color: rgb(196,196,196);
 }
 
 
-footer .lang {
+footer .lap .icons{
+    padding-top: 32px;
     display: flex;
-    border-radius: 20px;
+    flex-direction: column;
+    align-items: center;
+    box-sizing: border-box;
+    flex: 1 1 0%;
+}
+footer .lap .icons .svg{
+    padding: 2px 8px;
+    border-radius: 8px;
+    background-color: rgb(73, 73, 73);
+    display: flex;
     justify-content: center;
-    width: 150px;
-    background: white;
-    margin: 10px auto;
-    height: 30px;
+    box-sizing: border-box;
 }
-
-.lang #lang {
-    border: none;
-    font-size: 15px;
-    border-radius: 20px;
+footer .lap .icons .svg1{
+    margin-bottom: 10px;
 }
-
-.lang img {
-    width: 20%;
-    height: 20px;
-    margin: auto 0;
-}
-
-footer .greyicon {
-    width: 30px;
-    padding: 0;
-    margin: 0;
+footer .trio{
+    display: flex ;
+    flex-direction: column;
+    flex: 1 1 0%;
+    justify-content: space-between;
+    gap: 12px;
+    box-sizing: border-box;
 
 }
-
-footer span {
-
-    font-size: 13px;
-    margin: auto 10px;
-    font-weight: bold;
-
-}
-
-.last {
+.trio div{
+    /* padding-top: 32px; */
+    padding: 32px 0 0;
     display: flex;
-    margin: auto 20px;
+    flex-direction: column;
+    box-sizing: border-box;
+}
+.trio div h4{
+    margin-bottom: 8px;
+    color: rgb(255, 255, 255);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 22px;
+}
+footer .tab{
+    flex-direction: column-reverse;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    padding: 32px 0;
+}
+.tab .navv a{
+    opacity: 0.7;
+    cursor: pointer;
+}
+.tab .lang{
+    display: flex;
     flex-wrap: wrap;
     justify-content: center;
-} */
+    box-sizing: border-box;
+    width: 150px;
+}
+.tab .lang .input-con{
+    width: 100%;
+    max-width: 100%;
+    display: flex;
+    min-height: 32x;
+    font-size: 14px;
+    line-height: 20px;
+    color: var(--text-color);
+    /* display: flex; */
+    /* align-items: center; */
+    border-radius: 16px;
+    background: white;
+    padding: 4px 12px;
+}
+.input-con svg{
+    /* max-width: 100%; */
+    margin-right: 8px;
+    box-sizing: border-box;
+    color: #f1f1f1 !important;
+}
+.input-con select{
+    border: none;
+
+}
+.tab .last{
+    margin-top: 12px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 100%;
+    box-sizing: border-box;
+    text-align: center;
+}
+.tab .last a{
+    margin:  0 0 0 16px;
+    font-size: 12px;
+}
+.tab .last div{
+    box-sizing: border-box;
+    margin-left: -7px;
+}
+.tab .last span{
+    margin-left: 16px;
+    color: rgb(196, 196, 196);
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 18px;
+}
+
+@media screen and (max-width:480px) {
+    .tab .lang{
+    padding: 12px;
+
+    }
+    
+}
+
 
 /* ---------------------------------------------------------------- */
 
