--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ button {
 header {
     margin-left: 8px;
     display: flex;
+    box-sizing: border-box;
 }
 
 .head {
@@ -977,7 +978,7 @@ header {
 /* ------------------------------------------------------------------------------ */
 .neighbour {
     padding: 48px 0;
-    max-width: 1130;
+    max-width: 1130px;
     width: 100%;
     margin: 0 auto;
     box-sizing: border-box;
@@ -1012,7 +1013,7 @@ header {
 
 
 .neighbour .spans .seen {
-    border-bottom: 3.5px solid var(--text-color);
+    border-bottom: 3px solid var(--text-color);
     font-weight: bolder;
     color: var(--text-color);
 
@@ -1128,6 +1129,7 @@ footer h4 {
     margin: 0 0 8px 0;
     font-size: 16px;
     font-weight: 500;
+    font-family: "ttnorms-regular";
     line-height: 22px;
 }
 
@@ -1307,6 +1309,7 @@ footer .tab {
 
     .bannerflex {
         height: 650px;
+        box-sizing: border-box;
     }
 
     .banner .name {
@@ -1469,7 +1472,7 @@ footer .tab {
     }
 
     .featured {
-        margin: 32px 0;
+        margin: 33px 0;
         box-sizing: border-box;
     }
 
@@ -1486,6 +1489,9 @@ footer .tab {
 
 
     /* ------------------------------------------- */
+    .services{
+        box-sizing: border-box;
+    }
     .services .bg {
         background: linear-gradient(to bottom, white 0%, white 44.5%, var(--background-color) 44.5%, var(--background-color) 100%);
     }
@@ -1494,12 +1500,25 @@ footer .tab {
         margin: 0;
         padding: 0;
     }
+    .services .content .o{
+        /* margin-bottom: -0px; */
+        justify-content: center;
+        display: flex;
+        padding: 19px 20px 20px;
+        min-height: 90%;
+        align-items: center;
+        box-sizing: border-box;
 
-    .content>div {
+    }
+    .services .content .o .dasher,  .services .content .o .partner{
+        padding-top:1.2px !important;
+    }
+
+    .content .o >div {
         display: flex;
         gap: 60px;
         box-sizing: border-box;
-        padding: 20px;
+        /* padding: 20px 23.5px; */
         margin: 0;
         max-width: 1184px;
 
@@ -1521,6 +1540,8 @@ footer .tab {
     .services .shop,
     .services .dasher {
         flex-direction: row-reverse;
+        /* padding: 20px 38px; */
+
 
     }
 
@@ -1587,8 +1608,7 @@ footer .tab {
     .services .image {
         width: 100%;
         box-sizing: border-box;
-        overflow-clip-margin: content-box;
-        overflow: clip;
+       
     }
 
     .services img {
@@ -1612,7 +1632,7 @@ footer .tab {
     }
 
     .groceries h2 {
-        margin-top: 20px !important;
+        margin-top: 21px !important;
         font-size: 20px !important;
         font-weight: 700;
         line-height: 24px;
@@ -1649,8 +1669,10 @@ footer .tab {
     }
 
     .services .shop {
-        margin-bottom: -40px;
-        padding-top: 60px;
+        margin-bottom: -40px !important;
+        padding-top: 41px;
+        
+        padding-bottom: 0 !important;
     }
 
     /* -------------------------------------------- */
@@ -1658,7 +1680,8 @@ footer .tab {
 
     .featured1 {
         background: var(--background-color);
-        overflow: hidden;
+        box-sizing: border-box;
+        
 
 
     }
@@ -1809,8 +1832,15 @@ footer .tab {
 
 
     /* ------------------------- */
+    .neighbour{
+        box-sizing: border-box;
+    }
+    .neighbour .spans{
+        padding-top: 8px;
+    }
     .neighbour h1{
-        padding-bottom: 5px;
+        margin-bottom:17.5px !important;
+        /* padding-bottom: 5px; */
     }
 
     .neighbour .neighflex .tab-content {
@@ -1819,8 +1849,14 @@ footer .tab {
     .seemore{
         padding-top:15px !important;
     }
-
+    .seemore span{
+        padding-bottom: 2px;
+    }
+  
     /* --------------------------- */
+    footer{
+        box-sizing: border-box;
+    }
 
 
     footer h4 {
@@ -1846,6 +1882,10 @@ footer .tab {
 
 
     }
+    .lap{
+        display: flex;
+        flex-direction: column;
+    }
 
 
 
@@ -1853,24 +1893,27 @@ footer .tab {
         list-style-type: none;
         display: flex;
         flex-direction: row;
-        gap: 12px;
+        gap: 125px;
         justify-content: space-between !important;
         flex: 1 1 0% !important;
+        box-sizing: border-box;
     }
-    footer .let{
-       /* margin-left: 145px; */
-       transform: translateX(40px);
-    }
-    footer .doing{
-        /* margin-left: 150px; */
-       transform: translateX(85px);
-
-    }
+ 
+ 
 
     footer .trio>div {
         text-align: left;
         flex: 1;
     }
+       /* footer .let{
+    
+       transform: translateX(55px);
+    }
+    footer .doing{
+  
+       transform: translateX(110px);
+
+    } */
 
     footer .tab {
         display: flex;
@@ -1883,11 +1926,20 @@ footer .tab {
     .tab .last {
         display: flex;
         justify-content: center;
+        margin: 0 !important;
 
     }
+    /* .tab .last a, .tab .last span{
+        display: block;
+        line-height: 0.8px !important;
+        text-indent: 1px;
+    } */
+    /* .tab .last svg{
+        transform: translateY(-10px);
+    }  */
 
     .tab .lang {
-        margin: 10px 0px 0;
+        margin: 0px 0px 0;
 
     }
 
@@ -1898,6 +1950,7 @@ footer .tab {
 
     .tab .navv a {
         margin-left: 12px;
+        margin-bottom: 10px;
     }
 
 
@@ -1907,7 +1960,7 @@ footer .tab {
 
 @media screen and (min-width:960px) {
     .banner .name {
-        transform: translateY(-217px);
+        transform: translateY(-221px);
     }
 
     .banner .name .sv1 {
@@ -1942,6 +1995,33 @@ footer .tab {
         margin-left: 4px;
         letter-spacing: .3px;
     }
+    /* ----------------------------------------------- */
+    .featured{
+        margin: 32px 0 !important;
+    }
+    /* ---------------------------------------------------- */
+     .services .content .o{
+        padding: 20px !important;
+     }
+     .services .shop{
+        padding: 40px 0 0 !important;
+     }
+      .services .content .o .dasher,  .services .content .o .partner{
+        padding-top:0px !important;
+    }
+    /* ------------------------------------------------------------------------- */
+    footer .lap{
+        display: flex;
+        flex-direction: row-reverse;
+        box-sizing: border-box;
+    }
+    footer .trio{
+        gap: 12px !important;
+    }
+    footer .icons{
+        display: flex;
+        align-items: flex-end !important;
+    }
 
 
 }
@@ -1973,7 +2053,8 @@ footer .tab {
     }
 
     .featured {
-        margin: 96px 0;
+        margin: 96px 0 !important;
+        padding: 12px;
         flex-direction: row;
         /* box-sizing: border-box; */
         width: 1080px !important;
@@ -1993,6 +2074,17 @@ footer .tab {
 
 
     }
+    .featured  .dasher{
+        transform: translate(34px,-20px) ;
+    }
+    .featured .expirience{
+        transform: translate(-34px) ;
+
+    }
+    .featured .merchant{
+        transform: translateY(-20px);
+    }
+  
 
     .featured ul {
         display: flex;
@@ -2048,92 +2140,37 @@ footer .tab {
 
 
     }
+.featured .anchors a{
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 22px;
+}
+.anchors .svg{
+    padding-top: 3px !important;
+}
 
     /* ----------------------------------------------- */
-
-
-    .services .bg {
-        background: linear-gradient(to bottom, white 0%, white 40%, var(--background-color) 40%, var(--background-color) 100%);
+    .services{
+        width: 100%;
+        box-sizing: border-box;
     }
-
-    .services img {
-        width: 60%;
-        height: 550px !important;
-        object-fit: contain;
+    .services .content {
+        width: 100%;
+        box-sizing: border-box;
     }
-
-    .services .dashpass img,
-    .services .partner img {
-        margin-right: 40px;
+    .services .content div{
+        width: 100%;
+        box-sizing: border-box;
+        justify-self: center;
     }
-
-    .services .dasher img,
-    .services .shop img,
-    .services .find img {
-        margin-left: 60px;
-    }
-
-    .services div div {
-        line-height: 1.3;
-        margin: 0;
-        padding: 0;
-
-        align-self: center;
-
-
-    }
-
-    .services h3 {
-        font-size: 46px;
-    }
-
-    .services div div h5 {
-        font-size: 27px;
-    }
-
-    .services button {
-
-        font-weight: bolder;
-
-    }
-
-    .services p {
-        font-size: 20px;
-    }
-
-    .services .shop img {
-        object-fit: cover;
-        height: 800px !important;
-        overflow-y: visible;
-        z-index: 1;
-        margin-bottom: -50px;
+    .services img{
+        width: 100%;
     }
 
 
-    .services .groceries {
-        margin: 0 0 20px 0;
-        height: 600px;
+     /* --------------------------------------------------------- */
 
-        background-size: contain;
-        background-repeat: no-repeat;
-
-
-    }
-
-    .services .groceries h3 {
-        margin: 30px 400px 0 400px;
-
-    }
-
-
-    .groceries p {
-        font-size: 25px;
-        margin: 30px 150px 0 150px;
-
-
-    }
-
-    .featured1 h1 {
+    /* .featured1 h1 {
         font-size: 40px;
         padding: 30px 300px 10px 300px;
     }
@@ -2161,8 +2198,8 @@ footer .tab {
 
     .featured1 .alcohol .care {
         padding-top: 20px;
-    }
-
+    } */
+/* ----------------------------------------------------------- */
     footer .cat>* {
         flex: 0 0 250px;
         text-align: left;
