--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ button {
     border: none;
     padding: 15 auto;
     max-width: 900px;
-    font-family: "ttnorms-bold";
+   font-family: var(--usage-type-body-medium-default-font-family), -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; font-family: "ttnorms-bold";
 }
 
 .grid {
@@ -275,7 +275,7 @@ header {
     right: 0;
     margin-right: 24px;
     margin-top: 15px;
-    padding: 10.5px 12px 12px;
+    padding: 10.5px 12px 11.5px;
     max-width: 100%;
     align-self: flex-end;
 
@@ -284,27 +284,29 @@ header {
 .banner .name {
     display: flex;
     justify-content: center;
-    margin-top: 34px;
+    margin-top: 2px;
     padding-bottom: 0;
     align-items: center;
     box-sizing: border-box;
 }
 
-
-
-
-
-
-
+.banner .name .sv1{
+    margin-top: 1px;
+}
 .banner .name .sv2 {
     margin-left: 8px;
-    /* transform: translateY(-1px); */
+    transform: translateY(.5px);
 
 }
 
 .banner .h1 {
     margin: 20px 0px 22px 0px;
 
+}
+.banner .h1 h1{
+    font-weight: 900;
+    font-size: 32px;
+    font-family: TTNormsProCond-Blk, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .banner h1 {
@@ -416,14 +418,14 @@ header {
 .banner .login {
     display: flex;
     align-items: center;
-    margin: 16px auto;
-    padding: 10px 10px 10px 0;
+    margin: 0px auto;
+    padding: 11px 10px 10px 0;
     border: 1px solid #ccc;
     border-radius: 30px;
     height: 10px;
     background: #fff;
     width: 70px;
-    transform: translateY(2px);
+    transform: translateY(19px);
 
 
 
@@ -461,7 +463,7 @@ header {
     border: 1px solid #f1f1f1ff;
     border-radius: 10px;
     justify-self: right;
-    padding: 9px;
+    padding: 7px 10.5px 9px 8px ;
     box-sizing: border-box;
 
 
@@ -482,11 +484,12 @@ header {
 
 .app .info p {
     font-size: 14px;
-    font-weight: 200;
+    /* font-weight: 100; */
     display: block;
     margin: 2px 0 0 4px;
     color: #606060;
     font-weight: 600;
+    line-height: 20px;
 
 }
 
@@ -507,7 +510,6 @@ header {
 
     padding-right: -2px;
     padding-left: 4px;
-    margin-top: 2px;
 }
 
 .app .flex {
@@ -530,7 +532,7 @@ header {
 
 .app .div2 {
     background: #f7f7f7ff;
-    margin-top: 21px;
+    margin-top: 20.5px;
     max-width: 100%;
     display: block;
     box-sizing: border-box;
@@ -556,7 +558,7 @@ header {
     cursor: pointer;
     grid-row: 2/3;
     grid-column: 1/7;
-    margin: 19px 0 0 0;
+    margin: 14.5px 0 0 0;
     width: 100%;
 
 }
@@ -611,7 +613,7 @@ header {
 }
 
 .featured .image {
-    margin-right: 32px;
+    margin-right: 31px;
     box-sizing: border-box;
 }
 
@@ -888,6 +890,9 @@ header {
     align-items: center;
     box-sizing: border-box;
 }
+.featured1 .image{
+    width: 100%;
+}
 
 .featured1 img {
     width: 100%;
@@ -1109,10 +1114,25 @@ header {
 }
 
 /* ------------------------------------------------------------------ */
-footer {
-    padding: 0 20px;
+.foot {
+    width: 100vw;
     background: var(--text-color);
-    text-align: center;
+    align-items: flex-start;
+    justify-content: center;
+    display: flex;
+    box-sizing: border-box;
+}
+.foot .foo{
+    width: 1184px;
+}
+footer{
+    padding: 0 20px;
+    max-width: 1160px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+
 }
 
 footer .get {
@@ -1313,7 +1333,7 @@ footer .tab {
     }
 
     .banner .name {
-        transform: translateY(-223.5px);
+        transform: translateY(-208px);
         box-sizing: border-box;
     }
 
@@ -1360,7 +1380,7 @@ footer .tab {
         font-weight: 900;
         font-size: 40px;
         line-height: 40px;
-        transform: translateY(-9px);
+        transform: translateY(9px);
 
 
     }
@@ -1384,7 +1404,7 @@ footer .tab {
         justify-self: center;
         align-self: center;
         box-sizing: border-box;
-        transform: translateY(-11px);
+        transform: translateY(6px);
     }
 
     .banner .input-wrapper .svg11 {
@@ -1434,7 +1454,7 @@ footer .tab {
         display: flex !important;
         align-items: center;
         margin: 0 auto 0 auto;
-        transform: translateY(5px);
+        transform: translateY(22px);
         padding: 11px 6px 10px 12.5px;
         border: 1px solid #ccc;
         border-radius: 30px;
@@ -1903,7 +1923,6 @@ footer .tab {
 
     footer .trio>div {
         text-align: left;
-        flex: 1;
     }
        /* footer .let{
     
@@ -1960,7 +1979,7 @@ footer .tab {
 
 @media screen and (min-width:960px) {
     .banner .name {
-        transform: translateY(-221px);
+        transform: translateY(-205.5px);
     }
 
     .banner .name .sv1 {
@@ -2032,14 +2051,7 @@ footer .tab {
         width: 3%;
     }
 
-    .banner .name {
-        transform: translateY(-221px);
-    }
-
-    .banner h1 {
-        transform: translateY(-6px);
-
-    }
+ 
 
     /* ----------------------------------------------------------------- */
 
@@ -2170,56 +2182,5 @@ footer .tab {
 
      /* --------------------------------------------------------- */
 
-    /* .featured1 h1 {
-        font-size: 40px;
-        padding: 30px 300px 10px 300px;
-    }
-
-    .featured1 img {
-        width: 550px;
-        height: 650px;
-        object-fit: contain;
-        padding: 10px;
-    }
-
-    .featured1 h3 {
-        font-size: 40px;
-    }
-
-    .featured1 p {
-        margin: 0 30px 20px 30px;
-        font-size: 20px;
-    }
-
-    .featured1 button {
-        padding: 15px;
-        font-weight: 100px;
-    }
-
-    .featured1 .alcohol .care {
-        padding-top: 20px;
-    } */
-/* ----------------------------------------------------------- */
-    footer .cat>* {
-        flex: 0 0 250px;
-        text-align: left;
-
-    }
-
-    footer .lap {
-        display: flex;
-        flex-direction: row-reverse;
-        justify-content: space-around;
-        margin-left: -60px;
-        margin-top: 40px
-    }
-
-    footer .lang {
-        height: 40px !important;
-    }
-
-    .lang img {
-
-        margin: auto 5px auto 0;
-    }
+    
 }
