--- a/style.css
+++ b/style.css
@@ -42,10 +42,13 @@ a {
 p,
 a,
 li,
-button,
 span {
-    font-family: 'ttnorms-regular';
+    /* font-family: TT Norms, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; */
     font-size: 1.3;
+    letter-spacing: -0.01px;
+    font-family: 'ttnorms-regular';
+
+
 }
 
 h1,
@@ -55,6 +58,9 @@ h4,
 h5,
 h6 {
     font-family: 'ttnorms-bold';
+    /* font-family: TT Norms, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; */
+    letter-spacing: -0.01px;
+
 }
 
 li {
@@ -68,12 +74,16 @@ button {
     background: #eb1700ff;
     color: white;
     font-size: 16px;
-    font-weight: 900;
+    font-weight: 700;
     border-radius: 30px;
+    /* line-height: 22px; */
+    letter-spacing: -0.01px;
     border: none;
     padding: 15 auto;
     max-width: 900px;
-   font-family: var(--usage-type-body-medium-default-font-family), -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; font-family: "ttnorms-bold";
+    /* font-family: TT Norms, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; */
+    font-family: 'ttnorms-bold';
+
 }
 
 .grid {
@@ -124,7 +134,7 @@ header {
 
 .head .info {
     /* grid-column: 2/6; */
-    padding-top: 17.5px;
+    padding-top: 16px;
     /* margin-left: -25px; */
 
 
@@ -132,8 +142,12 @@ header {
 
 .head .info h4 {
     padding: 0;
+    font-weight: 700;
+    line-height: 22px;
+    /* font-family: TT Norms, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; */
 
     margin: 0;
+    letter-spacing: .001px;
     font-size: 16px;
 }
 
@@ -141,10 +155,10 @@ header {
     font-size: 14px;
     font-weight: 500;
     display: block;
-    margin-top: 3px;
+    margin-top: 1.5px;
     color: #606060;
-    /* font-weight: 600; */
-    letter-spacing: .2px;
+    font-weight: 560;
+    letter-spacing: .1px;
 
 }
 
@@ -155,7 +169,7 @@ header {
     height: 12px;
     border: none;
     padding: 0;
-    padding-top: 5px;
+    padding-top: 4px;
     margin-left: -3px;
 }
 
@@ -164,7 +178,10 @@ header {
     gap: 0;
     margin-top: 1px;
     padding-right: 4px;
-    padding-left: 3px;
+    padding-left: 2px;
+}
+.head .p1{
+    padding-top: 1.5px;
 }
 
 .head .flex {
@@ -275,7 +292,7 @@ header {
     right: 0;
     margin-right: 24px;
     margin-top: 15px;
-    padding: 10.5px 12px 11.5px;
+    padding: 10.5px 12px 11.5px 12.5px;
     max-width: 100%;
     align-self: flex-end;
 
@@ -316,7 +333,7 @@ header {
     margin: 0;
     font-weight: 900;
     flex: 1 0 30%;
-    font-size: 29px;
+
     line-height: 28px;
     max-width: 350px;
     justify-self: center;
@@ -358,13 +375,14 @@ header {
     border: none;
     /* margin: 0; */
     font-size: 16px;
-    font-weight: 500;
+    font-weight: 550;
+    font-family: "ttnorms-regular", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     outline: none;
     justify-self: center;
     align-self: center;
     border-radius: 30px;
     flex-grow: 1;
-    transform: translate(10px, 2px);
+    transform: translate(10px, 1.5px);
     /* transform: translateY(2px); */
 
     /* margin: 0 12px 0 auto; */
@@ -381,7 +399,7 @@ header {
     max-width: 100%;
     margin-right: 0px;
     /* box-sizing: border-box; */
-    transform: translateY(3px);
+    transform: translate(-.5px,3px);
 
 
 
@@ -393,7 +411,7 @@ header {
     border-radius: 50%;
     padding: 8px;
     margin-top: 7px;
-    margin-right: 0px;
+    margin-right: -1px;
     max-width: 100%;
     z-index: 2;
     position: relative;
@@ -419,13 +437,16 @@ header {
     display: flex;
     align-items: center;
     margin: 0px auto;
-    padding: 11px 10px 10px 0;
+    /* padding: 11px 10px 10px 0; */
     border: 1px solid #ccc;
     border-radius: 30px;
     height: 10px;
     background: #fff;
-    width: 70px;
+    box-sizing: border-box;
+    width: 81.04px;
+    height: 32px;
     transform: translateY(19px);
+    /* font-family: TT norms, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; */
 
 
 
@@ -436,8 +457,9 @@ header {
 
     background: none;
     padding: 0;
-    transform: translateY(-10px);
+    /* transform: translateY(-10px); */
     margin: 0 0 0px 0px;
+    margin-left: -7px;
     font-size: 14px;
     line-height: 20px;
     font-weight: 700;
@@ -1333,7 +1355,7 @@ footer .tab {
     }
 
     .banner .name {
-        transform: translateY(-208px);
+        transform: translateY(-208.5px);
         box-sizing: border-box;
     }
 
@@ -1376,11 +1398,14 @@ footer .tab {
 
 
     .banner h1 {
+        font-family: TTNormsProCond-Blk, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
         max-width: 750px;
         font-weight: 900;
-        font-size: 40px;
+        font-size: 40px !important;
         line-height: 40px;
-        transform: translateY(9px);
+        transform: translateY(5px);
+        text-align: center;
+        display: block;
 
 
     }
@@ -1395,7 +1420,7 @@ footer .tab {
     .input-wrapper {
         /* border: 2px solid blue; */
         width: 407px;
-        padding: 8px 8px 8px 20px;
+        padding: 7.9px 8px 8px 20px;
         min-height: 40px;
         height: 55.983px;
 
@@ -1404,15 +1429,15 @@ footer .tab {
         justify-self: center;
         align-self: center;
         box-sizing: border-box;
-        transform: translateY(6px);
+        transform: translateY(5px);
     }
 
     .banner .input-wrapper .svg11 {
         display: flex !important;
         font-size: 16px;
         font-weight: 500;
-        padding: 0;
-        transform: translate(-2px, 1px);
+        padding-left: 3px;
+        transform: translate(-4px, 1px);
         fill: #606060 !important;
     }
 
@@ -1981,7 +2006,10 @@ footer .tab {
     .banner .name {
         transform: translateY(-205.5px);
     }
+    .input-wrapper input{
+    transform: translate(10px, 0px);
 
+    }
     .banner .name .sv1 {
         width: 42px;
         height: 24px;
@@ -1995,6 +2023,7 @@ footer .tab {
         height: 18px;
 
     }
+    
 
     .banner .signin .below {
         display: none !important;
@@ -2046,6 +2075,14 @@ footer .tab {
 }
 
 @media screen and (min-width:1184px) {
+    .banner h1{
+        margin-bottom: 2px;
+
+    }
+    .banner .signin{
+              transform: translateY(21px);
+
+    }
 
     .fix .img2 {
         width: 3%;
